--- a/Css/Sass/body.sass
+++ b/Css/Sass/body.sass
@@ -1,5 +1,9 @@
 @import 'variables'
 
+html 
+	height: 100vh !important
+	width: 100% !important 
+
 img.xsmall 
 	max-width: 30% !important 
 	height: auto 
