--- a/Css/main.css
+++ b/Css/main.css
@@ -881,7 +881,6 @@ input.cr.input.error {
 
 ul.cr.list {
   position: relative;
-  color: #4d4d4d;
   width: 400px;
   margin: 2px 2px 2px 2px;
   box-sizing: border-box;
@@ -912,7 +911,7 @@ ul.cr.list {
     list-style-type: none;
     border-top: 0;
     box-shadow: 0.5px 0.5px 0.5px #dedede, -0.5px 0.5px 0.5px #dedede;
-    transition: background 0.3s ease-out; }
+    transition: background 0.3s ease-out, color 0.3s ease-out; }
     ul.cr.list li:first-child {
       border-top: 1px solid #dedede !important;
       border-top-right-radius: 4px;
@@ -1211,15 +1210,16 @@ ul.cr.list.gold li {
 ul.cr.list.gold i {
   color: #fff !important; }
 
-div.ul-head i.close {
-  color: #4d4d4d;
-  position: absolute;
-  top: 0;
-  right: 0;
-  font-size: 14px;
-  padding: 10px 10px 10px 10px;
-  cursor: pointer;
-  font-weight: bold; }
+div.ul-head {
+  background: #fff; }
+  div.ul-head i.close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 14px;
+    padding: 10px 10px 10px 10px;
+    cursor: pointer;
+    font-weight: bold; }
 
 div.ul-head.blue {
   background: #2196F3;
