--- a/Css/Sass/main.sass
+++ b/Css/Sass/main.sass
@@ -7,6 +7,7 @@
 @import 'badge'
 @import 'modals'
 @import 'snackbar'
+@import 'loaders'
 @import 'menubar'
 @import 'transitions'
 @import 'dropdowns'
