--- a/Css/Sass/transitions.sass
+++ b/Css/Sass/transitions.sass
@@ -145,5 +145,11 @@
         transform: scale(1.03)
 
 
+@keyframes spin 
+    from 
+        transform: rotate(0deg)
+    to 
+        transform: rotate(360deg)
+
 
 
